[gd_scene load_steps=7 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://juego/menus/MenuPausa.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 1 )

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
menu_inicial = "res://juego/menus/MenuInicio.tscn"

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -152.0
margin_right = 140.0
margin_bottom = 131.0

[node name="BotonReanudar" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -70.5
margin_right = 101.0
margin_bottom = -15.5
custom_fonts/font = SubResource( 1 )
text = "Reanudar"

[node name="BotonMenuPrincipal" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -5.5
margin_right = 101.0
margin_bottom = 49.5
custom_fonts/font = SubResource( 3 )
text = "Menu Principal"

[node name="BotonSalir" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 58.5
margin_right = 101.0
margin_bottom = 113.5
custom_fonts/font = SubResource( 3 )
text = "Salir"

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.0
margin_right = 140.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 4 )
text = "Pausa"
align = 1
valign = 1

[connection signal="pressed" from="Panel/BotonReanudar" to="." method="_on_BotonReanudar_pressed"]
[connection signal="pressed" from="Panel/BotonMenuPrincipal" to="." method="_on_BotonMenuPrincipal_pressed"]
[connection signal="pressed" from="Panel/BotonSalir" to="." method="_on_BotonSalir_pressed"]
